--- a/src/styles/common/blocks/header-socials.scss
+++ b/src/styles/common/blocks/header-socials.scss
@@ -1,6 +1,9 @@
 .header__socials{
     margin-top: 30px;
     z-index: 10;
+    @include mobile{
+        margin-top: 10px;
+    }
 }
 .header__socials-list{
     display: flex;
@@ -17,9 +20,11 @@
                 transition: .7s;
                 fill: $white;
                 
+                
             }
         }
     }
+    
 }
 .header__socials-link{
     width: 100%;
@@ -28,5 +33,8 @@
         width: 100%;
         height: 100%;
         fill: lighten($color: $gray, $amount: 45%);
+        @include mobile{
+           fill: lighten($color: $gray, $amount: 20%);
+        }
     }
 }
