--- a/src/styles/common/variables.scss
+++ b/src/styles/common/variables.scss
@@ -22,7 +22,62 @@ $roM: 'robotomedium';
 $roMIt: 'robotomedium_italic';
 $roR: 'robotoregular';
 
+//adaptive
+  @mixin full-hd {
+  @media (min-width: 1920px) {
+  }
+}
 
+@mixin quad-hd {
+  @media (min-width: 2500px) {
+    @content;
+  }
+}
+
+@mixin width-3k {
+  @media (min-width: 3000px) {
+    @content;
+  }
+}
+
+@mixin width-4k {
+  @media (min-width: 4000px) {
+    @content;
+  }
+}
+
+@mixin tablet {
+  @media (max-width: 768px) {
+    @content;
+  }
+}
+
+@mixin mobile {
+  @media (max-width: 320px) {
+    @content;
+  }
+}
+
+@mixin big-tablet {
+  @media (max-width: 1090px) {
+    @content;
+  }
+}
+
+@mixin small-tablet {
+  @media (max-width: 725px) {
+    @content;
+  }
+}
+
+
+
+
+
+
+
+
+//animation
 @keyframes menu-odd{
     0%{
         transform:translate3d(-2000%, 0, 0);
