--- a/src/styles/common/my-works.scss
+++ b/src/styles/common/my-works.scss
@@ -77,7 +77,7 @@
             height: 90px;
         }
         @include mobile{
-            margin-bottom: 14px;
+            margin-bottom: 0gpx;
             margin-top: 0;
             align-items: center;
         }
